# index.js
@@ -6,6 +6,7 @@ const userRoutes = require('./routes/user')
 const cors = require('cors')
 const swaggerDoc = require('./swagger-output.json')
 const swaggerUi = require('swagger-ui-express')
+const {auth, requiresAuth} = require('express-openid-connect')
 
 require('dotenv').config()
 
@@ -15,11 +16,45 @@ app.use(cors())
 
 app.use(express.json())
 
+// this will set up the auth router on /login, /logout, and /callback
+const config = {
+    authRequired: false,
+    auth0Logout: true,
+    secret: process.env.SECRET,
+    baseURL: process.env.BASE_URL,
+    clientID: process.env.CLIENT_ID,
+    issuerBaseURL: process.env.ISSUER_BASE_URL,
+    authorizationParams: {
+    audience: process.env.AUDIENCE, //helps us access the API
+    scope: 'openid profile email'
+  }
+}
+
+// this helps us access the user profile info
+app.use(auth(config))
+
+app.get('/', (req, res) =>{
+    res.send(req.oidc.isAuthenticated()? 'Logged in':'Logged out');
+})
+
+app.get('/profile', requiresAuth(), (req, res) => {
+  res.send(JSON.stringify(req.oidc.user));
+})
+
 app.use('/books', booksRoutes)
 
 app.use('/user',userRoutes)
 
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDoc))
+app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDoc,{
+    swaggerOptions:{
+        oauth2RedirectUrl: `${process.env.BASE_URL}/api-docs/oauth2-redirect.html`,
+        oauth:{
+          clientID: process.env.CLIENT_ID,
+          scopes: "openid profile email" ,
+          usePkceWithAuthorizationCodeGrant: true
+        }
+    }
+}))
 
 const port = process.env.PORT
 
